Implementacion de css

--- a/eventos/eventos.html
+++ b/eventos/eventos.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Héctor Couto</title>
+    <link rel="stylesheet" href="css/estilos.css">
+    <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
 </head>
 <body>
     <section class="sidebarleft">
@@ -22,7 +24,7 @@
     <section class="tour">
         <img src="../imagenes/banner4.jpg" alt="Hector Couto Playing Music" class="banner">
 
-        <h1>Tour Dates:</h1>
+        <h1>Tour <span>Dates:</span></h1>
         <table cellspacing="0" cellpadding="5" class="tabla">
             <tbody>
                 <tr class="1fecha">
@@ -51,7 +53,6 @@
     </section>
 
     <section class="pie">
-        <h1>Teminos y condiciones</h1>
         <p>Al entrar a esta pagina estas de acuerdo con los <a href="#">Terminos y condiciones.</a></p>
     </section>
     
