Implementacion de mobile first

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Héctor Couto</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -48,14 +49,14 @@
                 </ul>
             <li>Prensa:</li>
                 <ul class="subtitulo-contacto">
-                    <li><a href="mailto:manager@roushlabel.com">manager@roushlabel.com</a> </li>
+                    <li class="paddingfinal"><a href="mailto:manager@roushlabel.com">manager@roushlabel.com</a> </li>
                 </ul>
         </ul>
 
         <form action="#" method="post"
             enctype="multipart/form-data">
             <fieldset>
-                <legend>Envia un mensaje:</legend>
+                <legend><p>Envia un mensaje:</p></legend>
                 
                     <p>Nombre y Apellido:</p>
                     <input type="text" name="nombreyappellido" placeholder="Juan Alvarez" required>
