--- a/eventos/eventos.html
+++ b/eventos/eventos.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Héctor Couto</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -25,30 +26,32 @@
         <img src="../imagenes/banner4.jpg" alt="Hector Couto Playing Music" class="banner">
 
         <h1>Tour <span>Dates:</span></h1>
-        <table cellspacing="0" cellpadding="5" class="tabla">
-            <tbody>
-                <tr class="1fecha">
-                    <td class="dia">Mie 29 de Mayo</td>
-                    <td class="fiesta"><a href="https://www.tictra.com/event/warmsolidgrooves" target="_blank">Warm Festival @ Solid Groove</a></td>
-                    <td class="lugar">Las Brujas / Gran Canaria, Spain</td>
-                    <td class="boton"><a href="https://www.tictra.com/event/warmsolidgrooves" class="comprarticket" target="_blank">Comprar Tickets</a></td>
-                </tr>
-
-                <tr class="2fecha">
-                        <td class="dia">Sab 18 Mayo</td>
-                        <td class="fiesta"><a href="http://gigs.gigatools.com/gig/1024177" target="_blank">Groove @ Molocinque</a></td>
-                        <td class="lugar">Molocinque, Venezia, Italy</td>
-                        <td class="boton"><a href="http://gigs.gigatools.com/gig/1024177" class="comprarticket" target="_blank">Comprar Tickets</a></td>
-                    </tr>
-
-                    <tr class="3fecha">
-                            <td class="dia">Sab 11 Mayo</td>
-                            <td class="fiesta"><a href="https://www.amnesia.es/eventos/25/en/amnesia-opening-party-2019-8pm-till-late.html" target="_blank">Opening Party, Amnesia</a></td>
-                            <td class="lugar">Ibiza, Spain</td>
-                            <td class="boton"><a href="https://www.amnesia.es/eventos/25/en/amnesia-opening-party-2019-8pm-till-late.html" class="comprarticket" target="_blank">Comprar Tickets</a></td>
-                        </tr>
-            </tbody>
-        </table>
+        <ul class="tablas">
+            <li>
+                <ul class="fechas">
+                    <li><p>Mie 29 de Mayo</p></li>
+                    <li><p><a href="https://www.tictra.com/event/warmsolidgrooves" target="_blank">Warm Festival @ Solid Groove</a></p></li>
+                    <li><p>Las Brujas / Gran Canaria, Spain</p></li>
+                    <li><p><a href="https://www.tictra.com/event/warmsolidgrooves" class="comprarticket" target="_blank">Comprar Tickets</a></p></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="fechas">
+                        <li><p>Sab 18 Mayo</p></li>
+                        <li><p><a href="http://gigs.gigatools.com/gig/1024177" target="_blank">Groove @ Molocinque</a></p></li>
+                        <li><p>Molocinque, Venezia, Italy</p></li>
+                        <li><p><a href="http://gigs.gigatools.com/gig/1024177" class="comprarticket" target="_blank">Comprar Tickets</a></p></li>
+                </ul>
+            </li>
+            <li>
+                <ul class="fechas">
+                            <li><p>Sab 11 Mayo</p></li>
+                            <li><p><a href="https://www.amnesia.es/eventos/25/en/amnesia-opening-party-2019-8pm-till-late.html" target="_blank">Opening Party, Amnesia</a></p></li>
+                            <li><p>Ibiza, Spain</td>
+                            <li><p><a href="https://www.amnesia.es/eventos/25/en/amnesia-opening-party-2019-8pm-till-late.html" class="comprarticket" target="_blank">Comprar Tickets</a></p></li>
+                </ul>
+            </li>
+        </ul>
 
     </section>
 
