--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Héctor Couto</title>
     <link rel="stylesheet" href="css/estilos.css">
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
@@ -36,7 +37,7 @@
             </li>
             <li>
                 <h2><a href="http://www.buenosaliens.com/notas.cfm/cod.66714.t.lo-importante-es-hacer-disfrutar.htm" target="_blank">Lo importante es hacer disfrutar: Entrevista con Héctor Couto</a></h2>
-                <p>Un DJ unico en el hermoso Château de Chambord para Cercle.</p>
+                <p>Una charla con el artista sobre su nueva gira junto con Amnesia Ibiza en el país, su relacion con la marca ibicenca, la vida en Tenifre y la actualidad de su sello.</p>
             </li>
             
             <li>
